done for the night. header done

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
         <p>My Times</p>
       </div>
       <div class="navi">
-        <ul>
-          <li> <a href="#World">World</a></li>
-          <li> <a href="#US">U.S.</a></li>
-          <li> <a href="#Tech">Tech</a></li>
-          <li> <a href="#Science">Science</a></li>
-        </ul>
-
+        <nav>
+          <span class="button"> <a href="#World">World</a></span>
+          <span class="button"> <a href="#US">U.S.</a></span>
+          <span class="button"> <a href="#Tech">Tech</a></span>
+          <span class="button"> <a href="#Science">Science</a></span>
+        </nav>
       </div>
     </div>
 
