--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Header /-->
 
-    <div class="header">
+    <header>
       <div class="logo">
         <img src="./resources/images/logo.jpg" alt="My logo">
         <p>My Times</p>
@@ -22,54 +22,73 @@
           <span class="button"> <a href="#Science">Science</a></span>
         </nav>
       </div>
-    </div>
+    </header>
 
 <!-- Main content -->
 
     <div class="maincontent">
       <div class="column large">
-        <div class="image1">
-          <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
+        <div class="headerimage">
+          <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
         </div>
-        <div class="story1">
+        <div class="story main">
           <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
         </div>
-        <div class="story2">
-          <h1>Orca Spends Vacation at Land World Puget</h1>
-          <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        </div>
-        <div class="image1">
-          <p>Earth Spins Backwards for 2017</p>
-        </div>
-        <div class="story2">
-          <h1>Burger for Breakfast: How Early is too Early?</h1>
-          <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat</p>
-        </div>
-        <div class="image1">
-          <p>Research Shows Cameras Erase Memory</p>
+        <div class="storycolumn ">
+          <div class="column">
+            <div class="story one">
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+            </div>
+            <div class="image one">
+              <span>Earth Spins Backwards for 2017</span>
+            </div>
+          </div>
+          <div class="column">
+            <div class="story two">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat</p>
+            </div>
+            <div class="image two">
+              <span>Research Shows Cameras Erase Memory</span>
+            </div>
+          </div>
         </div>
       </div>
       <div class="column medium">
-        <div class="story2">
-          <h1>FBI Finds Action Star Guilty of False Advertising</h1>
+        <div class="story four">
+          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
         </div>
-        <div class="image1">
-          <p>Cats in Control-Is It a Thing?</p>
+        <div class="image three">
+          <span>Cats in Control-Is It a Thing?</span>
         </div>
-        <div class="story1">
+        <div class="story five">
           <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
         </div>
       </div>
       <div class="column small">
-        <div class="image2">
+        <div class="image cookie">
           <img src="./resources/images/cookie.png" alt="chocolate chip cookie">
         </div>
         <div class="newsbites">
           <h2>NEWS BITES</h2>
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+          <p>Cat Emoji Goes Viral</p>
+          <p>Buy Youtube Views</p>
+          <p>Home Business Advertising Ideas </p>
+          <p>Advertising Internet Online</p>
+          <p>Illustration in Marketing Materials</p>
+          <p>Finally a Top Secret Way You Can</p>
         </div>
       </div>
     </div>
+    <footer>
+      <p>MY Times</p>
+      <a href="#">World</a>
+      <a href="#">U.S.</a>
+      <a href="#">Tech</a>
+      <a href="#">Science</a>
+      <p>&copy; 2016 MyTimes (A Division of Codeacademy bite)</p>
+    </footer>
   </body>
 </html>
